// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`showHelp prints help for missing scripts 1`] = `
"npx {bold run} {dim [run-args] [node-args]} <{green script}|{blue pattern}> [srcipt-args] ...

{underline Examples}:
  npx {bold run}
  npx {bold run} {green clean} {green build}
  npx {bold run} {green config} --env='testing' {green build} {green deploy}
  npx {bold run} {blue lint:*}
  npx {bold run} {dim --inspect-brk} {green jest}

{underline default script}:
  When calling without any arguemtns 'npx run' will run the
  {bold.green default} script if it has been defined.

{underline run-args}:
  --help         Show this help.
  --dry-run      List scripts to be run, but don't run them.

{underline node-args}:
  Any args before the first script are sent to npx as node args.

  --inspect      Run node with --inspect to debug scripts.
  --inspect-brk  Run node with --inspect-brk to debug scripts

{underline scripts}:
{red no scripts discoverd}

You can add scripts using:

  ./package.json   - using npm run-scripts
  ./scripts module - exporting a single default object working
                     the same as the package.json run-scripts.
  ./scripts/*.js   - using any loadable nodejs module which is run
                     as a script given its basename

./scripts/*.js modules will override scripts of the same name defined in
the ./scripts module.
Scripts defined in the ./scripts module will override scripts of the same
name defined in ./package.json.

"
`;

exports[`showHelp prints help with list of scripts 1`] = `
"npx {bold run} {dim [run-args] [node-args]} <{green script}|{blue pattern}> [srcipt-args] ...

{underline Examples}:
  npx {bold run}
  npx {bold run} {green clean} {green build}
  npx {bold run} {green config} --env='testing' {green build} {green deploy}
  npx {bold run} {blue lint:*}
  npx {bold run} {dim --inspect-brk} {green jest}

{underline default script}:
  When calling without any arguemtns 'npx run' will run the
  {bold.green default} script if it has been defined.

{underline run-args}:
  --help         Show this help.
  --dry-run      List scripts to be run, but don't run them.

{underline node-args}:
  Any args before the first script are sent to npx as node args.

  --inspect      Run node with --inspect to debug scripts.
  --inspect-brk  Run node with --inspect-brk to debug scripts

{underline scripts}:
  {bold.green default}          {bold run} {green clean} {green test}
  {green clean}            rimraf {dim ./build}
  {green create-pkg-json}  echo {dim done}
  {green dry}              {bold run} {dim --dry-run} {green clean} --verbose
  {green test}             echo {dim Works on my machine!}
"
`;
